--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,13 @@
       }
     ],
     "routes": [
-    {
+      {
+        "src": "/api/(.*)",
+        "dest": "/src/index.js"
+      },
+      {
         "src": "/(.*)",
-        "dest": "/"
-    }
-  ]
+        "dest": "/src/index.js"
+      }
+    ]
 }
