--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-     {
-        "src": "./src/index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/src/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/src/index.js"
-      }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./api/index.js", 
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" } 
+  ],
+  "includeFiles": ["./db.json"]
 }
