--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "./api/index.js", 
+      "src": "./src/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" } 
+    {
+    "src": "*/(.*)", 
+    "dest": "/src/index.js" }
   ]
 }
