--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
- "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
+    "scripts": {
+    "start": "node ./src/index.js",
+    "backend": "json-server --watch db.json --port 5000",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
 },
   "eslintConfig": {
     "extends": [
