--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "./db.json",
+      "src": "./src/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/src/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/src/index.js"
     }
   ]
 }
