--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
     "scripts": {
     "start": "node ./src/index.js",
+    "vercel-build": "npx prisma migrate deploy",
     "backend": "json-server --watch db.json --port 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
