--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
     "scripts": {
     "start": "node ./src/index.js",
-    "vercel-build": "npx prisma migrate deploy",
+    "dev": "ts-node-dev src/index.js",
+    "vercel-build": "npx prisma generate && npx prisma migrate deploy",
     "backend": "json-server --watch db.json --port 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
