--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "web-vitals": "^2.1.4"
   },
     "scripts": {
-    "start": "node ./src/index.js",
+    "start": "react-scripts start",
     "backend": "json-server --watch db.json --port 5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "type": "module"
 },
   "eslintConfig": {
     "extends": [
